--- a/report.ipynb
+++ b/report.ipynb
@@ -44,7 +44,7 @@
    "source": [
     "L'analyse a été réalisée en Python. Nous avons d'abord moissonné les informations publiées sur *[InsightCrime](https://insightcrime.org/)* à l'aide de la librairie *Beautiful Soup*, avant de les nettoyer et de les organiser dans un jeu de données à l'aide de *Pandas*. Nous avons mené une analyse de texte afin de déduire les relations et allégeances depuis les articles moissonnés, ainsi que les tags (plus fiables, puisque sélectionnés par les auteurs des articles). *Spacy* a été utilisé pour l'analyse de sentiments (i.e, les relations alliées ou hostiles d'organisation à organisation, d'individu à organisation, et d'individu à individu). Enfin, nous avons construit et analysé le réseau à l'aide de *NetworkX*.\n",
     "\n",
-    "Le code soutenant cette analyse est disponible dans un référentiel GitHub public, accessible [ici](https://github.com/Hadrien-lcrx/vault-portfolio/tree/main/lab-cartels). Spécifiauement, le moissonnage est accessible dans le notebook [00_scraping.ipynb](https://github.com/Hadrien-lcrx/vault-portfolio/blob/main/lab-cartels/00_scraping.ipynb), et la construction et l'analyse de graph est accessible dans le notebook le notebook [01_graph_analysis.ipynb](https://github.com/Hadrien-lcrx/vault-portfolio/blob/main/lab-cartels/01_graph_analysis.ipynb)"
+    "Le code soutenant cette analyse est disponible dans un référentiel GitHub public, accessible [ici](https://github.com/Hadrien-lcrx/vault-portfolio/tree/main/lab-cartels). Spécifiauement, le moissonnage est accessible dans le notebook [00_scraping.ipynb](https://github.com/Hadrien-lcrx/vault-portfolio/blob/main/lab-cartels/00_scraping.ipynb), et la construction et l'analyse de graph est accessible dans le notebook le notebook [01_graph_analysis.ipynb](https://github.com/Hadrien-lcrx/vault-portfolio/blob/main/lab-cartels/01_graph_analysis.ipynb)."
    ]
   },
   {
@@ -73,7 +73,7 @@
     "import pandas as pd\n",
     "pd.options.display.max_colwidth = 30\n",
     "organizations_columns = [\"URL\", \"Nom\", \"Image\", \"Dernière màj\", \"Tags\", \"Pays\", \"Résumé\", \"Histoire\", \"Direction\",\n",
-    "                        \"Activités criminelles\", \"Géographie\", \"Alliés et ennemis\", \"Perspectives\"]\n",
+    "                         \"Activités criminelles\", \"Géographie\", \"Alliés et ennemis\", \"Perspectives\"]\n",
     "individuals_columns = [\"URL\", \"Nom\", \"Alias\", \"Image\", \"Dernière màj\", \"Tags\", \"Pays\", \"Résumé\", \"Histoire\",\n",
     "                       \"Activités criminelles\", \"Géographie\", \"Alliés et ennemis\", \"Perspectives\"]"
    ]
